fix label issue in test, lesson button text, autocomplete tag placeholder

--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -15,7 +15,7 @@
         <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
         <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/packs", "create"]'>
           <mat-icon class='mr-2'>add</mat-icon>
-          {{"Add Pack"}}
+          {{"New Pack"}}
         </button>
       </div>
     </div>
