--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -687,7 +687,7 @@
                               <div class='row mb-3'>
                                 <div class='col-12'>
                                   <h5 class='mat-h5 text-color__primary--light  mb-0 mr-4 font-calibri'>
-                                    VARIABLE(x)</h5>
+                                    Variable (x)</h5>
                                 </div>
                               </div>
                               <div class='row mb-2'>
@@ -778,7 +778,7 @@
                               <div class='row mb-3'>
                                 <div class='col-12'>
                                   <h5 class='mat-h5 text-color__primary--light mb-0 mr-4 font-calibri'>
-                                    VARIABLE(y)</h5>
+                                    Variable (y)</h5>
                                 </div>
                               </div>
                               <div class='row mb-2'>
