--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -133,7 +133,7 @@
                     <div class='row mb-2' *ngFor='let url of urlFormArray.controls; let i=index'>
                       <div class='col-12'>
                         <div class='container-fluid p-0' formGroupName='{{i}}'>
-                          <div class='row'>
+                          <div class='row mb-1'>
                             <div class='col-10'>
                               <mat-form-field class='w-100'>
                                 <mat-label>Enter URL</mat-label>
