fix(test-module): Fix point system along with validation all type of test

--- a/libs/shared/ui/common-form-field-textarea/src/lib/common-form-field-textarea.component.html
+++ b/libs/shared/ui/common-form-field-textarea/src/lib/common-form-field-textarea.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class='w-100'>
+<mat-form-field class='w-100' [ngClass]='{"text-muted": disabled}'>
   <mat-label>{{label}}</mat-label>
   <textarea rows='6' matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly'
             [placeholder]='placeholder || label'
