--- a/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
+++ b/libs/shared/ui/common-form-field/src/lib/common-form-field.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class='w-100'>
+<mat-form-field class='w-100' [ngClass]='{"text-muted": disabled}'>
   <mat-label>{{label}}</mat-label>
   <input matInput autocomplete='no' [disabled]='disabled' [readonly]='readonly' type='text'
          [placeholder]='placeholder || label'
