fix(OH-777-test-selector): Add active highlight color on active row

--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -146,6 +146,7 @@
 
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
                   <tr mat-row *matRowDef='let row; columns: displayedColumns;' (click)='addToList(row)'
+                      [ngClass]='{"active":isSelected(row)}'
                       class='row-react'></tr>
                 </table>
               </div>
