--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -89,10 +89,10 @@
                       </div>
                     </th>
                     <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.items'> {{(element.items | maxStringLimit) || '--'}} </td>
+                        [matTooltip]='element.items'> {{(element.items | maxStringLimit) || '--'}}  </td>
                   </ng-container>
                   <tr mat-header-row *matHeaderRowDef='displayedColumns' ></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react' [routerLink]="['/featured','edit',row.name, row.location]" ></tr>
                 </table>
               </div>
             </div>
