fix(OH-899): Refactored all modules to allow publish only in case of valid entity

--- a/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
+++ b/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
@@ -159,6 +159,7 @@
                     <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                   </button>
                   <button (click)='store.toggleActive(row.id, row.isActive)' mat-menu-item
+                          *ngIf='isPublishToggleAvailable(row)'
                           [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'>
                     <mat-icon>{{row.isActive ? "block" : "check_circle_outline"}}</mat-icon>
                     <span>{{(row.isActive ? constantDataService.BUTTON_NAME.DEACTIVATE : constantDataService.BUTTON_NAME.ACTIVATE) | titlecase}}</span>
