--- a/libs/test-group/test-group-listing/src/lib/test-group-listing.component.html
+++ b/libs/test-group/test-group-listing/src/lib/test-group-listing.component.html
@@ -147,7 +147,7 @@
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
-                        <button mat-menu-item (click)='store.toggleActive(row.id, row.isVisible)'>
+                        <button mat-menu-item (click)='store.toggleActive(row.id, row.isVisible)' *ngIf='isPublishToggleAvailable(row)'>
                           <mat-icon>{{row.isVisible ? "block" : "check_circle_outline"}}</mat-icon>
                           <span>{{(row.isVisible ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
                         </button>
