--- a/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
+++ b/libs/questionnaire/questionnaire-listing/src/lib/questionnaire-listing.component.html
@@ -154,7 +154,7 @@
                   <mat-icon>more_vert</mat-icon>
                 </button>
                 <mat-menu #userListMenu='matMenu'>
-                  <button mat-menu-item [routerLink]='["/questionnaire", "edit", row?.id]'>
+                  <button mat-menu-item (click)='editPromptForPublished(row)'>
                     <mat-icon>create</mat-icon>
                     <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                   </button>
