--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -224,9 +224,9 @@
                 (emitDeleteEvent)='deleteSelectedContentPrompt(content)'
               ></hidden-innovation-pack-content-card>
             </ng-template>
-            <div class='d-flex align-items-center justify-content-center w-100 mt-3' *ngIf='!contentIsValid'>
+            <div class='d-flex align-items-center justify-content-center w-100 mt-3' *ngIf='packForm.controls.content.invalid'>
               <ng-template
-                [ngIf]='!contentIsValid && ((packForm.controls.content.touch$ | async) || (packForm.controls.content.dirty$ | async))'
+                [ngIf]='((packForm.controls.content.touch$ | async) || (packForm.controls.content.dirty$ | async))'
                 [ngIfElse]='minContentLengthElse'>
                 <mat-error><small>{{formValidationService.contentSelectionValidationMessage.minLength}}</small></mat-error>
               </ng-template>
