--- a/libs/test-group/test-group-create/src/lib/test-group-create.component.html
+++ b/libs/test-group/test-group-create/src/lib/test-group-create.component.html
@@ -162,12 +162,8 @@
           </mat-card-actions>
         </mat-card>
         <ng-template
-          [ngIf]='!testsIsValid && ((testGroup.controls.tests.touch$ | async) || (testGroup.controls.tests.dirty$ | async))'
-          [ngIfElse]='minTetsLengthElse'>
+          [ngIf]='testGroup.controls.tests.invalid && ((testGroup.controls.tests.touch$ | async) || (testGroup.controls.tests.dirty$ | async))'>
           <mat-error><small>{{formValidationService.testSelectionValidationMessage.minLength}}</small></mat-error>
-        </ng-template>
-        <ng-template #minTetsLengthElse>
-          <mat-hint><small>{{formValidationService.testSelectionValidationMessage.minLength}}</small></mat-hint>
         </ng-template>
       </div>
     </div>
