--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -205,7 +205,7 @@
                           <mat-icon>create</mat-icon>
                           <span>{{constantDataService.BUTTON_NAME.EDIT | titlecase}}</span>
                         </button>
-                        <button (click)='store.toggleActive(row.id, row.isPublished)' mat-menu-item *ngIf='isPublishToggleAvailable(row)'>
+                        <button (click)='store.toggleActive(row.id, row.isPublished)' mat-menu-item>
                           <mat-icon>{{row.isPublished ? "block" : "check_circle_outline"}}</mat-icon>
                           <span>{{(row.isPublished ? publishStatusEnum.UNPUBLISHED : publishStatusEnum.PUBLISHED) | titlecase}}</span>
                         </button>
