--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -19,7 +19,7 @@
   </div>
   <div class='container-fluid p-0'>
     <div class='row'>
-      <div class='col-lg-6 col-12' >
+      <div class='col-lg-6 col-12' *ngIf="name === featuredType.SPOTLIGHT">
         <mat-card>
           <mat-card-content>
             <div class='container-fluid p-0 '>
@@ -85,6 +85,58 @@
                     color='primary' type='submit'>
                     Upload
                   </button>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div class='col-lg-6 col-12' *ngIf="name === featuredType.FEATURED_PACKS">
+        <mat-card>
+          <mat-card-content>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                    General</h5>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Location</mat-label>
+                    <input matInput autocomplete='no' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Rail Name</mat-label>
+                    <input matInput autocomplete='no' type='text'>
+                  </mat-form-field>
+                </div>
+              </div>
+            </div>
+          </mat-card-content>
+        </mat-card>
+      </div>
+      <div class='col-lg-6 col-12' *ngIf="name === featuredType.FEATURED_TESTS">
+        <mat-card>
+          <mat-card-content>
+            <div class='container-fluid p-0 '>
+              <div class='row mb-3'>
+                <div class='col-12'>
+                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                    General</h5>
+                </div>
+              </div>
+              <div class='row mb-2'>
+                <div class='col-12'>
+                  <mat-form-field class='w-100'>
+                    <mat-label>Location</mat-label>
+                    <input matInput autocomplete='no' type='text' disabled>
+                  </mat-form-field>
                 </div>
               </div>
             </div>
