--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -11,11 +11,11 @@
         </mat-form-field>
       </div>
       <div class='col d-flex align-items-center justify-content-end'>
-        <mat-spinner class='mr-4' [diameter]='20' *ngIf='true'></mat-spinner>
-        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/featured", "create"]'>
-          <mat-icon class='mr-2'>add</mat-icon>
-          {{"Add Featured"}}
-        </button>
+        <mat-spinner class='mr-4' [diameter]='20' *ngIf='store.isLoading$ | async'></mat-spinner>
+<!--        <button mat-flat-button color='primary' class='ml-2' [routerLink]='["/featured", "create"]'>-->
+<!--          <mat-icon class='mr-2'>add</mat-icon>-->
+<!--          {{"Add Featured"}}-->
+<!--        </button>-->
       </div>
     </div>
     <div class='row'>
@@ -91,8 +91,19 @@
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.items'> {{(element.items | maxStringLimit) || '--'}}  </td>
                   </ng-container>
+
+                  <ng-container matColumnDef='action'>
+                    <th mat-header-cell *matHeaderCellDef
+                        [width]='30'>{{constantDataService.FIELD_NAME.ACTION | titlecase}}</th>
+                    <td mat-cell *matCellDef='let row'>
+                              <button mat-stroked-button color='primary' class='my-2' [routerLink]="['/featured','edit', row.name, row.location]" >
+                                {{"Edit"}}
+                              </button>
+                    </td>
+                  </ng-container>
+
                   <tr mat-header-row *matHeaderRowDef='displayedColumns' ></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react' [routerLink]="['/featured','edit',row.name, row.location]" ></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' class='row-react' ></tr>
                 </table>
               </div>
             </div>
