--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -19,6 +19,12 @@
   </div>
   <div class='container-fluid p-0'>
     <div class='row'>
+      <ng-template [ngIf]="route.params | async  " let-routeData>
+        {{routeData["featured-name-enum"]}}
+
+      </ng-template>
+
+
       <div class='col-lg-6 col-12' *ngIf="name === featuredType.SPOTLIGHT">
         <mat-card>
           <mat-card-content>
@@ -91,6 +97,7 @@
           </mat-card-content>
         </mat-card>
       </div>
+
       <div class='col-lg-6 col-12' *ngIf="name === featuredType.FEATURED_PACKS">
         <mat-card>
           <mat-card-content>
@@ -206,4 +213,5 @@
     </div>
   </div>
 </div>
+
 
