--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -20,136 +20,135 @@
   <div class='container-fluid p-0'>
     <div class='row'>
       <ng-template [ngIf]="route.params | async  " let-routeData>
-        {{routeData["featured-name-enum"]}}
 
+
+        <div class='col-lg-6 col-12' *ngIf="name === featuredType.SPOTLIGHT">
+          <mat-card>
+            <mat-card-content>
+              <div class='container-fluid p-0 '>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                      General</h5>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Location</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Rail Name</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Heading</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Subheading</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Button Text</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+              <div class='container-fluid p-0 '>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
+                      Media</h5>
+                  </div>
+                </div>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <p class='text-muted mb-2'>Poster</p>
+                    <button
+                      mat-stroked-button
+                      color='primary' type='submit'>
+                      Upload
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+        <div class='col-lg-6 col-12' *ngIf="routeData['featured-name-enum'] === featuredType.FEATURED_PACKS">
+          <mat-card>
+            <mat-card-content>
+              <div class='container-fluid p-0 '>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                      General</h5>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Location</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Rail Name</mat-label>
+                      <input matInput autocomplete='no' type='text'>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
+
+        <div class='col-lg-6 col-12' *ngIf="routeData['featured-name-enum'] === featuredType.FEATURED_TESTS">
+          <mat-card>
+            <mat-card-content>
+              <div class='container-fluid p-0 '>
+                <div class='row mb-3'>
+                  <div class='col-12'>
+                    <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
+                      General</h5>
+                  </div>
+                </div>
+                <div class='row mb-2'>
+                  <div class='col-12'>
+                    <mat-form-field class='w-100'>
+                      <mat-label>Location</mat-label>
+                      <input matInput autocomplete='no' type='text' disabled>
+                    </mat-form-field>
+                  </div>
+                </div>
+              </div>
+            </mat-card-content>
+          </mat-card>
+        </div>
       </ng-template>
 
-
-      <div class='col-lg-6 col-12' *ngIf="name === featuredType.SPOTLIGHT">
-        <mat-card>
-          <mat-card-content>
-            <div class='container-fluid p-0 '>
-              <div class='row mb-3'>
-                <div class='col-12'>
-                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                    General</h5>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Location</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Rail Name</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Heading</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Subheading</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Button Text</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-            <div class='container-fluid p-0 '>
-              <div class='row mb-3'>
-                <div class='col-12'>
-                  <h5 class='mat-h5 text-color__primary--light text-uppercase mb-0 mr-4 font-calibri'>
-                    Media</h5>
-                </div>
-              </div>
-              <div class='row mb-3'>
-                <div class='col-12'>
-                  <p class='text-muted mb-2'>Poster</p>
-                  <button
-                    mat-stroked-button
-                    color='primary' type='submit'>
-                    Upload
-                  </button>
-                </div>
-              </div>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-
-      <div class='col-lg-6 col-12' *ngIf="name === featuredType.FEATURED_PACKS">
-        <mat-card>
-          <mat-card-content>
-            <div class='container-fluid p-0 '>
-              <div class='row mb-3'>
-                <div class='col-12'>
-                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                    General</h5>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Location</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Rail Name</mat-label>
-                    <input matInput autocomplete='no' type='text'>
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
-      <div class='col-lg-6 col-12' *ngIf="name === featuredType.FEATURED_TESTS">
-        <mat-card>
-          <mat-card-content>
-            <div class='container-fluid p-0 '>
-              <div class='row mb-3'>
-                <div class='col-12'>
-                  <h5 class='mat-h5 text-uppercase text-color__primary--light mb-0 mr-4 font-calibri'>
-                    General</h5>
-                </div>
-              </div>
-              <div class='row mb-2'>
-                <div class='col-12'>
-                  <mat-form-field class='w-100'>
-                    <mat-label>Location</mat-label>
-                    <input matInput autocomplete='no' type='text' disabled>
-                  </mat-form-field>
-                </div>
-              </div>
-            </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
       <div class='col-lg-6 col-12'>
         <mat-card>
           <mat-card-title class='d-flex justify-content-between align-items-center'>
@@ -210,6 +209,7 @@
           </mat-card-content>
         </mat-card>
       </div>
+
     </div>
   </div>
 </div>
