feat(OH-972-selector): Add new test and test group selection logic for testgroup and pack module

--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -204,8 +204,11 @@
               Add
             </button>
             <mat-menu #menuPack='matMenu'>
-              <button type='button' mat-menu-item (click)='openContentSelectorDialog()'>
-                <span>Content (Test/Test-Group/Questionnaire)</span>
+              <button type='button' mat-menu-item (click)='openTestSelector()'>
+                <span>Test Single</span>
+              </button>
+              <button type='button' mat-menu-item (click)='openTestGroupSelector()'>
+                <span>Test Group</span>
               </button>
               <button type='button' mat-menu-item (click)='openCreateLessonDialog()'>
                 <span>Lessons</span>
