--- a/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
+++ b/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
@@ -2,9 +2,15 @@
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
       ADD TEST GROUP</h4>
-    <button mat-icon-button (click)='closeDialog()'>
-      <mat-icon>close</mat-icon>
-    </button>
+    <div class='d-flex align-items-center'>
+      <div class='d-flex align-items-center text-muted mt-1 mr-3'>
+        <mat-icon class='text-success mr-2'>autorenew</mat-icon>
+        <h4 class='text-success mat-h4 mb-0'>Selection Auto-Saved</h4>
+      </div>
+      <button mat-icon-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
   </div>
 </div>
 <div class='container-fluid p-0'>
@@ -46,9 +52,7 @@
                   </ng-container>
 
                   <ng-container matColumnDef='id'>
-                    <th mat-header-cell
-                        [width]='55'
-                        *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
+                    <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.ID | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'> {{element.id ?? '--'}} </td>
                   </ng-container>
 
@@ -113,8 +117,51 @@
                     <td mat-cell *matCellDef='let element'>{{element.tests?.length ?? 0}}</td>
                   </ng-container>
 
+                  <ng-container matColumnDef='status'>
+                    <th mat-header-cell
+                        *matHeaderCellDef>
+                      <div class='d-flex align-items-center justify-content-between'>
+                  <span>
+                    {{constantDataService.FIELD_NAME.STATUS | titlecase}}
+                  </span>
+                        <div class='d-flex align-items-center'>
+                          <button mat-icon-button class='mr-3'
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'
+                                  [matMenuTriggerFor]='statusMenu'
+                                  [disabled]='(store.isActing$ | async)'
+                                  color='{{filters.controls.published?.value ? "primary" : ""}}'>
+                            <mat-icon style='font-size: 20px'>filter_list</mat-icon>
+                          </button>
+                          <mat-menu #statusMenu='matMenu'>
+                            <mat-selection-list color='primary'
+                                                (selectionChange)='updateFilterChange($event, filters.controls.published)'
+                                                [multiple]='false' class='pt-0'>
+                              <mat-list-option [value]='"TRUE"'>
+                                {{publishStatusEnum.PUBLISHED | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='"FALSE"'>
+                                {{publishStatusEnum.UNPUBLISHED | titlecase}}
+                              </mat-list-option>
+                              <mat-list-option [value]='undefined'>
+                                Clear
+                              </mat-list-option>
+                            </mat-selection-list>
+                          </mat-menu>
+                        </div>
+                      </div>
+                    </th>
+                    <td mat-cell *matCellDef='let element'>
+                      <hidden-innovation-common-data-field-status
+                        [chipType]='element.isVisible ? statusChipType.SUCCESS : statusChipType.WARNING'
+                        [text]='((element.isVisible ? publishStatusEnum.PUBLISHED : publishStatusEnum.UNPUBLISHED)  | titlecase)'
+                      ></hidden-innovation-common-data-field-status>
+                    </td>
+                  </ng-container>
+
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' (click)='addToList(row)'
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;'
+                      (click)='isLoading ? null : addToList(row)'
+                      [ngClass]='{"active":isSelected(row)}'
                       class='row-react'></tr>
                 </table>
               </div>
@@ -146,8 +193,4 @@
       </mat-card>
     </div>
   </div>
-</div>
-<div mat-dialog-actions align='end'>
-  <button mat-button (click)='closeDialog()' cdkFocusInitial>Cancel</button>
-  <button mat-flat-button color='primary' (click)='saveSelectedTestgroups()'>Save</button>
 </div>
