feat(OH-972-questionnaire-selector): Add selector logic and integration into pack module

--- a/libs/pack/pack-create/src/lib/pack-create.component.html
+++ b/libs/pack/pack-create/src/lib/pack-create.component.html
@@ -210,6 +210,9 @@
               <button type='button' mat-menu-item (click)='openTestGroupSelector()'>
                 <span>Test Group</span>
               </button>
+              <button type='button' mat-menu-item (click)='openQuestionnaireSelector()'>
+                <span>Questionnaire</span>
+              </button>
               <button type='button' mat-menu-item (click)='openCreateLessonDialog()'>
                 <span>Lessons</span>
               </button>
