--- a/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
+++ b/libs/shared/ui/questionnaire-selector/src/lib/questionnaire-selector.component.html
@@ -2,9 +2,15 @@
   <div class='d-flex align-items-center justify-content-between'>
     <h4 class='mat-h4 text-uppercase text-color__primary mb-0 mr-4 font-calibri font-weight-normal'>
       ADD QUESTIONNAIRE</h4>
-    <button mat-icon-button mat-dialog-close>
-      <mat-icon>close</mat-icon>
-    </button>
+    <div class='d-flex align-items-center'>
+      <div class='d-flex align-items-center text-muted mt-1 mr-3'>
+        <mat-icon class='text-success mr-2'>autorenew</mat-icon>
+        <h4 class='text-success mat-h4 mb-0'>Selection Auto-Saved</h4>
+      </div>
+      <button mat-icon-button mat-dialog-close>
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
   </div>
 </div>
 <div class='container-fluid p-0'>
@@ -30,17 +36,18 @@
           <div class='container-fluid p-0'>
             <div class='row'>
               <div class='col-12'>
-                <table mat-table [dataSource]='questionnaires' class='w-100'>
+                <table mat-table [dataSource]='questionnaires' [trackBy]='trackById' class='w-100'>
 
                   <ng-container matColumnDef='select'>
                     <th mat-header-cell *matHeaderCellDef>
                     </th>
-                    <td mat-cell *matCellDef='let test'>
+                    <td mat-cell *matCellDef='let questionnaire'>
                       <mat-checkbox
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
                         color='primary'
                         (click)='$event.stopPropagation()'
-                        (change)='$event ? addToList(test) : null'
-                        [checked]='isSelected(test)'>
+                        (change)='$event ? addToList(questionnaire) : null'
+                        [checked]='isSelected(questionnaire)'>
                       </mat-checkbox>
                     </td>
                   </ng-container>
@@ -165,7 +172,9 @@
                   </ng-container>
 
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumns;' (click)='addToList(row)'
+                  <tr mat-row *matRowDef='let row; columns: displayedColumns;'
+                      (click)='isLoading ? null : addToList(row)'
+                      [ngClass]='{"active":isSelected(row)}'
                       class='row-react'></tr>
                 </table>
               </div>
@@ -188,17 +197,10 @@
       <mat-card class='p-0'>
         <mat-paginator
           [disabled]='store.isLoading$ | async'
-          [pageSize]='pageSize'
-          [length]='store.count$ | async'
-          [pageIndex]='paginatorIndex'
+          [pageSize]='pageSize' [length]='store.count$ | async' [pageIndex]='paginatorIndex'
           [pageSizeOptions]='pageSizeOptions'
-          (page)='pageEvent = $event; onPaginateChange($event)'
-        ></mat-paginator>
+          (page)='pageEvent = $event; onPaginateChange($event)'></mat-paginator>
       </mat-card>
     </div>
   </div>
-</div>
-<div mat-dialog-actions align='end'>
-  <button mat-button (click)='closeDialog()' cdkFocusInitial>Cancel</button>
-  <button mat-flat-button color='primary' (click)='saveSelectedQuestionnaires()'>Save</button>
 </div>
