--- a/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
+++ b/libs/shared/ui/test-group-selector/src/lib/test-group-selector.component.html
@@ -43,6 +43,7 @@
                     </th>
                     <td mat-cell *matCellDef='let test'>
                       <mat-checkbox
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
                         color='primary'
                         (click)='$event.stopPropagation()'
                         (change)='$event ? addToList(test) : null'
