--- a/libs/featured/create-featured/src/lib/create-featured.component.html
+++ b/libs/featured/create-featured/src/lib/create-featured.component.html
@@ -11,7 +11,7 @@
         <button
           mat-flat-button
           class='ml-3'
-          color='primary' type='submit'>
+          color='primary' type='submit' [disabled]="(store.isLoading$ | async ) || (store.loaded$ | async) ">
           Save
         </button>
       </div>
@@ -147,9 +147,9 @@
                         controlPath='posterId'
                         [setImageData]='selectedFeatured?.poster'
                         [aspectRatio]='aspectRatio.CUBE'
-                        [parentCtrl]='featuredGroup.controls.posterId'
-                        (emitImageCtrlData)='featuredGroup.controls.posterId?.setValue($event)'
-                        (emitRemoveImage)='featuredGroup.controls.posterId?.reset($event)'
+                        [parentCtrl]='posterIDctrl'
+                        (emitImageCtrlData)='posterIDctrl?.setValue($event)'
+                        (emitRemoveImage)='posterIDctrl?.reset($event)'
                       ></hidden-innovation-common-form-field-image>
                     </div>
                   </div>
