--- a/libs/featured/featured-listing/src/lib/featured-listing.component.html
+++ b/libs/featured/featured-listing/src/lib/featured-listing.component.html
@@ -16,30 +16,15 @@
                     <th mat-header-cell *matHeaderCellDef>
                       {{constantDataService.FIELD_NAME.NAME | titlecase}}
                     </th>
-                    <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.name'> {{(element.name | titlecase) || '--'}} </td>
+                    <td mat-cell *matCellDef='let element'> {{(element.name | replaceUnderscore | titlecase) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='location'>
                     <th mat-header-cell *matHeaderCellDef>Screen</th>
-                    <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.location'> {{(element.location | titlecase) || '--'}} </td>
+                    <td mat-cell *matCellDef='let element'> {{(element.location | titlecase) || '--'}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='updated_at'>
-                    <th mat-header-cell *matHeaderCellDef>
-                      <div class='d-flex align-items-center justify-content-between'>
-                  <span>
-                    {{constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase}}
-                  </span>
-                        <div class='d-flex align-items-center'>
-                          <button mat-icon-button class='mr-3'>
-                            <mat-icon
-                              style='font-size: 20px;'>{{true ? "arrow_upward" : "arrow_downward"}}</mat-icon>
-                          </button>
-                        </div>
-                      </div>
-
-                    </th>
+                    <th mat-header-cell *matHeaderCellDef>{{constantDataService.FIELD_NAME.DATE_MODIFIED | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'> {{(element.updated_at | date: 'shortDate') || '--'}}</td>
                   </ng-container>
 
