--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -49,7 +49,7 @@
                     </th>
                     <td mat-cell *matCellDef='let test'>
                       <mat-checkbox
-                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async)'
+                        [disabled]='(store.isLoading$ | async) || (store.isActing$ | async) || ((categoryData?.limit && selectedTests.length >= selectionLimit) && !isSelected(test))'
                         color='primary'
                         (click)='$event.stopPropagation()'
                         (change)='$event ? addToList(test) : null'
@@ -226,7 +226,7 @@
 
                   <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
                   <tr mat-row *matRowDef='let row; columns: displayedColumns;'
-                      (click)='isLoading ? null : addToList(row)'
+                      (click)='isLoading ? null : ((categoryData?.limit && selectedTests.length >= selectionLimit) ? (isSelected(row) ? addToList(row) : null) : addToList(row))'
                       [ngClass]='{"active":isSelected(row)}'
                       class='row-react'></tr>
                 </table>
